Adjust video size for smaller screen to avoid grid auto adjustments when video is too big to fit

--- a/mod_app/static/css/film.css
+++ b/mod_app/static/css/film.css
@@ -158,3 +158,11 @@
     }
   }
 }
+
+@media screen and (min-width: 767px) and (max-width: 1000px) {
+  #filmic {
+    .film__video {
+      width: 450px;
+    }
+  }
+}
